<resources>
    <string name="app_name">Dronestagram for Muzei</string>
    <string name="source_name">Dronestagram</string>
    <string name="source_description">Popular pictures taken from the sky</string>
    <string name="action_share_artwork">Share picture</string>
    <string name="dronestagram_source_error_no_artwork_to_share">No artwork to share.</string>

    <!-- preferences -->
    <string name="prefs_title">Settings</string>

    <string name="prefs_header_general">General</string>
    <string name="prefs_header_about">About</string>

    <string name="pref_cyclemode_key" translatable="false">pref_cyclemode</string>
    <string name="pref_cyclemode_title">Random picture</string>
    <string name="pref_cyclemode_summary__true">Displays a random picture for an adjustable period of time.</string>
    <string name="pref_cyclemode_summary__false">Displays the latest pictures (Every 3 hours)</string>

    <string name="pref_intervalpicker_key" translatable="false">pref_intervalpicker</string>
    <string name="pref_intervalpicker_title">Update interval</string>
    <string name="pref_intervalpicker_defaultvalue" translatable="false">60</string>

    <string name="pref_wifiswitch_key" translatable="false">pref_wifiswitch</string>
    <string name="pref_wifiswitch_title">Over Wi-Fi only</string>
    <string name="pref_wifiswitch_summary">Updating on Wi-Fi helps to reduce mobile data usage and battery drain.</string>

    <string name="pref_about_key" translatable="false">pref_about</string>
    <string name="pref_about_name">Sergiu Marsavela</string>
    <string name="pref_about_webpage">http://marsave.la</string>
    <string name="pref_about_summary">%1$s %2$s - %3$d\n@marsavela</string>

    <string name="pref_dronestagram_key" translatable="false">pref_dronestagram</string>
    <string name="pref_dronestagram_name">Dronestagr.am</string>
    <string name="pref_dronestagram_webpage">http://dronestagr.am</string>
    <string name="pref_dronestagram_summary">This is not an official Dronestagram app. All content displayed is property of their respective owners.</string>
</resources>