<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_header_general">
        <la.marsave.dronestagrammuzei.SwitchCompatPreference
            android:defaultValue="true"
            android:key="@string/pref_cyclemode_key"
            android:persistent="true"
            android:summaryOff="@string/pref_cyclemode_summary__false"
            android:summaryOn="@string/pref_cyclemode_summary__true"
            android:title="@string/pref_cyclemode_title"
            android:widgetLayout="@layout/pref_switch" />
        <ListPreference
            android:defaultValue="@string/pref_intervalpicker_defaultvalue"
            android:dependency="@string/pref_cyclemode_key"
            android:entries="@array/list_intervalpicker_entries"
            android:entryValues="@array/list_intervalpicker_values"
            android:key="@string/pref_intervalpicker_key"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_intervalpicker_title" />
        <la.marsave.dronestagrammuzei.SwitchCompatPreference
            android:defaultValue="false"
            android:key="@string/pref_wifiswitch_key"
            android:persistent="true"
            android:summary="@string/pref_wifiswitch_summary"
            android:title="@string/pref_wifiswitch_title"
            android:widgetLayout="@layout/pref_switch" />
    </PreferenceCategory>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/prefs_header_about">
        <Preference
            android:background="@null"
            android:key="@string/pref_about_key"
            android:title="@string/pref_about_name" />
        <Preference
            android:background="@null"
            android:key="@string/pref_dronestagram_key"
            android:summary="@string/pref_dronestagram_summary"
            android:title="@string/pref_dronestagram_name" />
    </PreferenceCategory>
</PreferenceScreen>